# snake-xenzia

./: .gitignore  README.md  pyproject.toml  snake_game_human.py
model/: model.pth
src/: agent.py  baseline_agent.py  model.py  new_agent.py  new_game.py
src/baseline/: baseline_agent.py  baseline_game.py  baseline_model.py
src/new/: new_agent.py  new_game.py  new_model.py
