[tool.poetry]
name = "snake-xenziar"
version = "1.0.0"
description = ""
authors = [""]
readme = "README.md"

[[tool.poetry.source]]
name = "default"
url = "https://pypi.org/simple"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
secondary = true

[tool.poetry.dependencies]
numpy = { version = "^1.24.1", source = "default" }
pandas = { version = "^1.5.2", source = "default" }
pygame = { version = "^2.5.0", source = "default" }
python = "~3.10.6"
scikit-learn = { version = "^1.2.1", source = "default" }
scipy = { version = "^1.10.0", source = "default" }
seaborn = { version = "^0.12.2", source = "default" }
tensorboard = { version = "*", source = "default"}
tensorboardX = { version = "*", source = "default"}
torch = { version = "^2.0.1", source = "pytorch" }

[tool.poetry.group.dev.dependencies]
jupyterlab = { version = "^3.6.4", source = "default" }
matplotlib = { version = "^3.0.0", source = "default" }

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120

[tool.isort]
atomic = true
line_length = 120
profile = "black"

